# pg-script-2

./: CMakeLists.txt  vcpkg.json
include/: do.hpp
src/: do.cpp
test/: CMakeLists.txt  test.cpp
